Fix filters alignment and search marker icon

--- a/style.css
+++ b/style.css
@@ -85,6 +85,15 @@ ul {
   width: 40px;
 }
 
+.search__icon__marker {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #f2f2f2;
+  border-radius: 10px 0 0 10px;
+  width: 40px;
+}
+
 .search__button {
   height: 35px;
   margin: 0;
@@ -105,7 +114,7 @@ ul {
   display: flex;
   flex-wrap: wrap;
   justify-content: flex-start;
-  align-items: center;
+  align-items: baseline;
 }
 
 .search__filters_label {
@@ -125,7 +134,7 @@ ul {
   text-align: center;
   border-radius: 20px;
   font-weight: bold;
-  margin-right: 10px;
+  margin: 10px 10px 0 0;
 }
 
 .search__filters__option:hover {
